--- a/platformio.ini
+++ b/platformio.ini
@@ -16,22 +16,12 @@ board_build.partitions = larger.csv
 board_build.embed_files =
     src/pages/favicon.ico
 board_build.embed_txtfiles =
-    src/pages/styles-67aa3b0203355627b525be2ea57be7bf.css
-    src/pages/config.html
-    src/pages/result.html
-    src/pages/apply.html
-    src/pages/scan.html
-    src/pages/reset.html
-    src/pages/unlock.html
-    src/pages/advanced.html
-    src/pages/lock.html
-    src/pages/clients.html
-    src/pages/ota.html
-    src/pages/otalog.html
-    src/pages/about.html
-    src/pages/portmap_start.html
-    src/pages/portmap_end.html
-    src/pages/jquery-8a1045d9cbf50b52a0805c111ba08e94.js
+    src/pages/index.html
+    src/pages/assets/index-iP8dXgYc.js
+    src/pages/assets/index-O1a2Fugk.css
+    src/pages/assets/router-DuyDbDLs.js
+    src/pages/assets/ui-CGN5kbBo.js
+    src/pages/assets/vendor-dQk0gtQ5.js
 
 platform = espressif32
 ; platform = espressif32@6.5.0
