--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -47,8 +47,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install htmlmin esptool
-      - name: Minify HTML files
-        run: python .github/workflows/shrinkHTML.py
+      # - name: Minify HTML files
+      #   run: python .github/workflows/shrinkHTML.py
         shell: sh
       - name: Build ESP32 firmware
         run: platformio run -e esp32
