fix: frontend and API overload issue

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,11 +17,11 @@ board_build.embed_files =
     src/pages/favicon.ico
 board_build.embed_txtfiles =
     src/pages/index.html
-    src/pages/assets/index-DUflLXBX.js
-    src/pages/assets/index-DpOF12W4.css
-    src/pages/assets/router-DuyDbDLs.js
-    src/pages/assets/ui-CGN5kbBo.js
-    src/pages/assets/vendor-dQk0gtQ5.js
+    src/pages/index.js
+    src/pages/index.css
+    src/pages/router.js
+    src/pages/ui.js
+    src/pages/vendor.js
 
 
 
