--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,8 +4,8 @@ idf_component_register(SRCS ${app_sources} INCLUDE_DIRS ".")
 
 target_add_binary_data(${COMPONENT_TARGET} "pages/favicon.ico" BINARY)
 target_add_binary_data(${COMPONENT_TARGET} "pages/index.html" TEXT)
-target_add_binary_data(${COMPONENT_TARGET} "pages/assets/index-DUflLXBX.js" TEXT)
-target_add_binary_data(${COMPONENT_TARGET} "pages/assets/index-DpOF12W4.css" TEXT)
-target_add_binary_data(${COMPONENT_TARGET} "pages/assets/router-DuyDbDLs.js" TEXT)
-target_add_binary_data(${COMPONENT_TARGET} "pages/assets/ui-CGN5kbBo.js" TEXT)
-target_add_binary_data(${COMPONENT_TARGET} "pages/assets/vendor-dQk0gtQ5.js" TEXT)
+target_add_binary_data(${COMPONENT_TARGET} "pages/index.js" TEXT)
+target_add_binary_data(${COMPONENT_TARGET} "pages/index.css" TEXT)
+target_add_binary_data(${COMPONENT_TARGET} "pages/router.js" TEXT)
+target_add_binary_data(${COMPONENT_TARGET} "pages/ui.js" TEXT)
+target_add_binary_data(${COMPONENT_TARGET} "pages/vendor.js" TEXT)
