will it compile?

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,15 +13,15 @@ framework = espidf
 monitor_speed = 115200
 monitor_raw = yes 
 board_build.partitions = larger.csv
-board_build.embed_files =
-    src/pages/favicon.ico
-board_build.embed_txtfiles =
-    src/pages/index.html
-    src/pages/index.js
-    src/pages/index.css
-    src/pages/router.js
-    src/pages/ui.js
-    src/pages/vendor.js
+;board_build.embed_files =
+;    src/pages/favicon.ico
+;board_build.embed_txtfiles =
+;    src/pages/index.html
+;    src/pages/index.js
+;    src/pages/index.css
+;    src/pages/router.js
+;    src/pages/ui.js
+;    src/pages/vendor.js
 
 
 
